# rust_cli_musicplayer

./: Cargo.toml  README.md
src/: audio.rs  common.rs  main.rs  output.rs
