[package]
name = "audio_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
symphonia = { version = "0.5", features = [ "mp3", "aac", "symphonia-codec-aac", "isomp4"] }
dialoguer = "0.9.0"
log = { version = "0.4", features = ["release_max_level_info"] }
console = "0.15.0"
[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.13.3"
rb = "0.3.2"
